--- a/NextJS/stackpverflow-appwrite/package.json
+++ b/NextJS/stackpverflow-appwrite/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "appwrite": "^21.4.0",
     "next": "16.0.3",
+    "node-appwrite": "^20.3.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
